update memo 등록